--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Unit 4, Part 2: HTML/CSS Practice</title>
-    <!-- Create and link a CSS file! -->
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Unit 4, Part 2: HTML/CSS Practice</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Create and link a CSS file! -->
+
+</head>
+
+<body class = "center">
+  <header style='background-color:orange' ;>
     <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
-  </body>
+    <p></p>
+  </header>
+  <div class="info">
+    <h2>My name is Steven Gangl</h2>
+  </div>
+  <div><img
+      src="https://listings-prod.tcimg.net/listings/44312/63/33/JF2SKAJC8NH513363/AV3U5O7C2GYVFOZWSKYNTP2T6A-cr-540.jpg"
+      alt="pic of suabru">
+  </div>
+<h3>
+  My mode of transportation is a Subaru Forester.
+</h3>
+</body>
 </html>
