--- a/assignment/index.html
+++ b/assignment/index.html
@@ -22,7 +22,7 @@
       alt="pic of suabru">
   </div>
 <h3>
-  My mode of transportation is a Subaru Forester.
+  and my mode of transportation is a Subaru Forester.
 </h3>
 </body>
 </html>
