--- a/assignment/index.html
+++ b/assignment/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class = "center">
+  <!-- I put the html stlye here rather than in css because I think thats what the directions wanted me to do.-->
   <header style='background-color:orange' ;>
     <h1>Unit 4, Part 2: HTML/CSS Practice</h1>
     <p></p>
